Fixes aspect ratio of post images. Fixes alignment of post title and tags

--- a/src/components/PostImage/PostImage.css
+++ b/src/components/PostImage/PostImage.css
@@ -1,15 +1,6 @@
 .post-image {
-  width: 100%;
-  height: 100%;
-  position: absolute;
   grid-area: content;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 100%;
-}
-
-.post-image > img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
