--- a/src/components/PostTitlebar/PostTitlebar.css
+++ b/src/components/PostTitlebar/PostTitlebar.css
@@ -1,16 +1,16 @@
 .post-titlebar {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   background-color: #000000;
   font-size: 25px;
   color: #FFFFFF;
   grid-area: header;
   display: grid;
-  grid-template-columns: 100%;
+  grid-template-columns: 95% 5%;
   grid-template-rows: 100%;
 }
 
 .post-titlebar > .title {
-  margin-left: 5px;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  margin: auto auto auto 5px;
 }
